Updated to Java25 and updated to Spring Boot 3.5.6 Also made use of the improvement to GC and ObjectHeader sizes in Java25