@@ -1,12 +1,12 @@
 # Build the application using the maven image
-FROM maven:3.9.9 AS builder
+FROM maven:3.9.9-eclipse-temurin-25 AS builder
 
 WORKDIR /build
 COPY . .
 RUN mvn clean package
 
 # Create a slimmed version of the Java JRE using the Corretto image
-FROM amazoncorretto:21.0.6-alpine AS corretto-jdk
+FROM eclipse-temurin:25-jdk-alpine AS jre-builder
 
 RUN apk add --no-cache binutils
 # Build small JRE image
@@ -25,12 +25,20 @@ ENV JAVA_HOME=/jre
 ENV PATH="${JAVA_HOME}/bin:${PATH}"
 
 # Copy the JRE into Alpine image
-COPY --from=corretto-jdk /slim_jre $JAVA_HOME
+COPY --from=jre-builder /slim_jre $JAVA_HOME
 
 # Copy the compiled app into Alpine image
 COPY --from=builder build/target/quickdrop-0.0.1-SNAPSHOT.jar app/quickdrop.jar
 
 WORKDIR /app
+
+ENV JAVA_TOOL_OPTIONS="\
+ -XX:+UseCompactObjectHeaders \
+ -XX:+UseStringDeduplication \
+ -XX:+ExitOnOutOfMemoryError \
+ -XX:+UseShenandoahGC \
+ -XX:ShenandoahGCMode=generational
+"
 
 VOLUME ["/app/db", "/app/log", "/app/files"]
 
